fix overflow problem in projects page

--- a/css/projects.css
+++ b/css/projects.css
@@ -8,17 +8,19 @@ main {
     margin-top: 80px;
     width: 100%;
     color: rgb(37, 79, 114); 
-    justify-content: space-evenly;
+    flex-wrap: wrap
 }
 
 .p-container {
-    width: 30%;
+    width: 300px;
+    box-sizing: border-box;
     background-color: rgb(109, 220, 235);
     text-align: center;
     height: 400px;
     border-radius: 1em;
     box-shadow: 0px 5px 8px  rgb(51, 128, 138);
     padding-top: 30px;
+    margin: 10px auto;
 }
 
 .p-container li{
